log
Fri 24 Mar 2023 12:19:28 AM UTC: 
 tests:  0|6
total_score: 0/70
4ec836b
Fri 24 Mar 2023 12:20:40 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b8ae59a
Fri 24 Mar 2023 12:36:21 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
67eea49
Fri 24 Mar 2023 12:45:57 AM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
1a3135a
Fri 24 Mar 2023 12:46:16 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
581c205
Fri 24 Mar 2023 06:33:25 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:69:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   69 |   if (list->head == NULL)
      |   ^~
list.c:71:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   71 |     list -> tail = nuevoNodo;
      |     ^~~~
list.c:73:3: error: ‘else’ without a previous ‘if’
   73 |   else
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
a06e88d
Fri 24 Mar 2023 06:33:47 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
756c6de
Fri 24 Mar 2023 06:40:35 PM UTC: 
 list.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:97:28: error: ‘NuevoNodo’ undeclared (first use in this function); did you mean ‘nuevoNodo’?
   97 |     list-> current->next = NuevoNodo;
      |                            ^~~~~~~~~
      |                            nuevoNodo
list.c:97:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fdd2e06
